# lab06dz

./: CMakeLists.txt  REPORT.md
.github/workflows/: ci-linux.yml  release.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
